--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2789,7 +2789,7 @@ label {
 }
 
 .card-journey-small .card-info {
-	padding: 38px 30px;
+	padding: 38px 30px !important;
 	background-color: var(--bs-neutral-0);
 	border-radius: 12px;
 	position: relative;
